--- a/frontend/untitled/package.json
+++ b/frontend/untitled/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
